objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Privacy - Data Owner Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Review Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Privacy Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Processing Request</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Review Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Privacy Request - Read Only</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Data Request Processed</fullName>
        </values>
        <values>
            <fullName>Identity Verified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Case - Read Only</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Privacy_Request_Information__c</fullName>
        <description>This field will contain additional information to send to the Data Owners to process data owner requests</description>
        <inlineHelpText>This field will contain additional information to send to the Data Owners to process data owner requests</inlineHelpText>
        <label>Additional Privacy Request Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Appeasement_Code__c</fullName>
        <label>Appeasement Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awaiting_Agent_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Agent Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Customer_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Customer Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Image_Link__c</fullName>
        <description>Controlled by Brand Account - Link to the Brand's Publicly Accessible Image. To be used in email templates</description>
        <label>Brand Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Label__c</fullName>
        <label>Brand Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Logo__c</fullName>
        <formula>IMAGE("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0688A000000FVWN&amp;operationContext=CHATTER&amp;contentId=05T8A000002GaJx", 'Tommy Hilfiger')</formula>
        <label>Brand Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Lookup_Search__c</fullName>
        <description>This field is used to convert the Brand API value to a Label for use on Quick Actions</description>
        <formula>CASE(TEXT(Brand__c),
"1", "Tommy",
"2", "Calvin Klein",
"4", "Izod",
"5", "Van Heusen",
"7", "Speedo USA",
"8", "Heritage Brands",
"9", "Partner Brands ",
"81", "IZOD.com",
"82", "Van Heusen.com",
"83", "Warner's",
"84", "Style Bureau",
"11", "True&amp;Co",
"10", "Olga",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_Email__c</fullName>
        <description>Controlled By Account - Email Address for the Brand's Privacy Email Communications</description>
        <label>Brand Privacy Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_Form_Link__c</fullName>
        <description>Controller by Brand Account - Link to the brand's privacy policy form to submit data access and deletion requests</description>
        <label>Brand Privacy Form Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_Label__c</fullName>
        <description>A Brand Label field used to generate the correct brand label for Privacy email templates</description>
        <formula>CASE(TEXT(Brand__c),
"1", "Tommy",
"2", "Calvin Klein",
"4", "Van Heusen, IZOD &amp; styleBureau",
"5", "Van Heusen, IZOD &amp; styleBureau",
"7", "Speedo USA",
"8", "Heritage Brands",
"9", "Partner Brands ",
"81", "IZOD.com",
"82", "Van Heusen.com",
"83", "Warner's",
"84", "Van Heusen, IZOD &amp; styleBureau",
"11", "True&amp;Co",
"10", "Olga",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand_Privacy_Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Privacy_OWA_Name__c</fullName>
        <description>Controlled By Account - This field is the DisplayName of the Brand's Org Wide Email Address. This value must match *exactly* the DisplayName or privacy emails will not send.</description>
        <label>Brand Privacy OWA Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Brand_Id</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPA_Vendors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCPA Vendors</label>
        <referenceTo>CCPA_Vendors__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSAT_Agent_Issue_Reason__c</fullName>
        <label>CSAT Agent Issue Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent knowledge was unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>Agent attitude was unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>Agent took too long to resolve matter</fullName>
                </value>
                <value>
                    <fullName>Agent never resolved matter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Expectations__c</fullName>
        <label>CSAT Expectations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeded Expectations</fullName>
                </value>
                <value>
                    <fullName>Met Expectations</fullName>
                </value>
                <value>
                    <fullName>Below Expectations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Issue__c</fullName>
        <label>CSAT Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue not related to experience with agent</fullName>
                </value>
                <value>
                    <fullName>Issue related to experience with agent</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Result__c</fullName>
        <label>CSAT Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallDirection__c</fullName>
        <description>Call Direction</description>
        <label>CallDirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDurationInSeconds__c</fullName>
        <description>Call duration in seconds</description>
        <label>CallDurationInSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallEndTime__c</fullName>
        <label>CallEndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallStartTime__c</fullName>
        <description>Call start time</description>
        <label>CallStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Days__c</fullName>
        <formula>IF (IsClosed,ClosedDate - CreatedDate,NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Minutes__c</fullName>
        <formula>IF( IsClosed, (ClosedDate - CreatedDate) *1440, (NOW() - CreatedDate ) *1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Source_Country__c</fullName>
        <label>Case Source Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CalvinKlein.us</fullName>
                    <label>Online - CalvinKlein.com</label>
                </value>
                <value>
                    <fullName>Calvin Klein Retail</fullName>
                    <label>Calvin Klein Store</label>
                </value>
                <value>
                    <fullName>Tommy.com</fullName>
                    <label>Online - Tommy.com</label>
                </value>
                <value>
                    <fullName>Tommy Hilfiger Retail</fullName>
                    <label>Tommy Hilfiger Store</label>
                </value>
                <value>
                    <fullName>SpeedoUSA.com</fullName>
                    <label>Online - speedo.com</label>
                </value>
                <value>
                    <fullName>Other Retailer</fullName>
                </value>
                <value>
                    <fullName>VanHeusen.com</fullName>
                    <label>Online - vanheusen.com</label>
                </value>
                <value>
                    <fullName>Van Heusen Retail</fullName>
                    <label>Van Heusen Store</label>
                </value>
                <value>
                    <fullName>Izod.com</fullName>
                    <label>Online - Izod.com</label>
                </value>
                <value>
                    <fullName>styleBureau.com</fullName>
                    <label>Online - styleBureau.com</label>
                </value>
                <value>
                    <fullName>trueandco.com</fullName>
                    <label>Online -True&amp;co.com</label>
                </value>
                <value>
                    <fullName>CalvinKlein.ca</fullName>
                    <label>Online-CalvinKlein Canada</label>
                </value>
                <value>
                    <fullName>Speedo.com</fullName>
                </value>
                <value>
                    <fullName>Warner.com</fullName>
                    <label>Online-Warner's</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Call Notes/Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Customer_ID__c</fullName>
        <formula>Contact.Customer_Id__c</formula>
        <label>Contact Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Loyalty_ID__c</fullName>
        <formula>IF(!ISBLANK(Contact.LoyaltyID__c), Contact.LoyaltyID__c,  Loyalty_Account_Number__c)</formula>
        <label>Contact Loyalty ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Search_Email__c</fullName>
        <description>To display it in the Contact search page</description>
        <label>Contact Search Email</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Country of Residence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <description>This field is used to show Country in Personal Data Request Form</description>
        <inlineHelpText>Need to Select the Country of Residence</inlineHelpText>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States of America (USA)</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei Darussalam</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByMethod__c</fullName>
        <label>Created By Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Formatted__c</fullName>
        <formula>LEFT(TEXT(CreatedDate), 10)</formula>
        <label>Created Date Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataOwnerOrContactName__c</fullName>
        <formula>IF( ISBLANK(Data_Owner__c), Contact.FirstName + ' ' + Contact.LastName,  Data_Owner__r.FirstName + ' ' + Data_Owner__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Owner or Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Owner_Name__c</fullName>
        <formula>IF(!ISBLANK(Data_Owner__c),
Data_Owner__r.FirstName  &amp; " " &amp; Data_Owner__r.LastName,
'')</formula>
        <label>Data Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Data Owner's Contact Record</description>
        <label>Data Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Privacy Requests</relationshipLabel>
        <relationshipName>PrivacyRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_On_Hold__c</fullName>
        <description>Field used for "Case On Hold 3 Days Reminder" Process Builder. Date for time Case was put on hold.</description>
        <label>Date On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Until_Due__c</fullName>
        <formula>IF (!ISBLANK(Due_Date__c),
  IF(Due_Date__c &gt; NOW(),
  Due_Date__c - NOW(),
  0),
NULL)</formula>
        <label>Days Until Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dear_Valued_Customer__c</fullName>
        <formula>IF( Contact.FirstName!=NULL , LEFT(Contact.FirstName,1) + LOWER(RIGHT(Contact.FirstName,LEN(Contact.FirstName)-1)),'Valued Customer')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_From_Address__c</fullName>
        <description>Default From Address for the case. Currently, only setup for Privacy Cases, based on Brand-Account</description>
        <label>Default From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Description_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <label>Dollar Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duplicate_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_For_Survey__c</fullName>
        <formula>AND(
NOT(Suppress_Survey__c),
NOT(ISBLANK(TEXT(Reason_Code__c))),
NOT(ISBLANK(TEXT(Reason_Code_Details__c))),
CASE(TEXT(Reason_Code_Details__c), 
"Good Service", "false",
"Poor Service", "false",
"Licensing", "false",
"Business Solicitation", "false",
"Model Inquiry", "false",
"BBB Complaint", "false",
"Human Resources", "false",
"Payroll", "false",
"Employment/Internship Inquiries", "false",
"Customer Accident", "false",
"Donation Request", "false",
"Risk", "false",
"Contest/Sweepstakes", "false",
"Possible Fraud", "false",
"Payment Fraud", "false",
"Fulfill Cancel", "false",
"Final Sale", "false",
"Email Unsubscribe Request", "false",
"Catalog Unsubscribe Request", "false",
"Possible Fraud", "false",
"Stuck in Placed/Submitted", "false",
"Out of Size Range", "false",
"International Inquiry (APO/FPO/DPO)", "false",
"true"
) = "true",
CASE(TEXT(Reason_Sub_detail__c),
"Licensing Request", "false",
"Media Response Request", "false",
"Store Warning", "false",
"Sticker Request", "false",
"true") = "true",
CASE(TEXT(Reason_Code__c),
"Marketing", "false",
"true") = "true"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible For Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Assignment_Code__c</fullName>
        <label>Email Assignment Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R</fullName>
                    <label>Retail</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Ecomm</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Wholesale</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>RS</fullName>
                    <label>Retail Store</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Contact_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is automatically checked using a Workflow Field Update when a case status is changed from 'NEW' to "Resolved"</description>
        <label>First Contact Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSAT Follow Up Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Contact__c</fullName>
        <description>Used in Lightning App Builder for Component Visibility</description>
        <formula>NOT(ISBLANK(ContactId) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Confirmation__c</fullName>
        <formula>IF(!ISBLANK(Privacy_User_Confirmed_Date__c),
FLOOR(NOW() - Privacy_User_Confirmed_Date__c ) * 24
+
FLOOR( MOD( (NOW() - Privacy_User_Confirmed_Date__c ) * 24, 24 ) )
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Confirmation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Consumer_Last_Contacted__c</fullName>
        <formula>IF(!ISBLANK(Privacy_Date_Consumer_Last_Contacted__c),
FLOOR(NOW() - Privacy_Date_Consumer_Last_Contacted__c ) * 24
+
FLOOR( MOD( (NOW() - Privacy_Date_Consumer_Last_Contacted__c ) * 24, 24 ) )
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Consumer Last Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Creation__c</fullName>
        <formula>FLOOR(NOW() - CreatedDate ) * 24
+
FLOOR( MOD( (NOW() - CreatedDate ) * 24, 24 ) )</formula>
        <label>Hours Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Resolved__c</fullName>
        <formula>IF(!ISBLANK(Privacy_Case_Resolved_Date__c),
FLOOR(NOW() - Privacy_Case_Resolved_Date__c ) * 24
+
FLOOR( MOD( (NOW() - Privacy_Case_Resolved_Date__c ) * 24, 24 ) )
,0)</formula>
        <label>Hours Since Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsRedeemed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRedeemed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Existing_Purchase_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Is Existing Purchase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Existing_Purchase__c</fullName>
        <description>This field is created to keep information about the purchase is Existing or Not</description>
        <label>Is Existing Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Milestone_Violated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Milestone Violated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tommy_Adaptive_READONLY__c</fullName>
        <description>This READONLY field is created to store customers original details filled through web form</description>
        <label>Is Tommy Adaptive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoyaltyComments__c</fullName>
        <label>Loyalty Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_Account_Number__c</fullName>
        <label>Loyalty Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macro_Subject__c</fullName>
        <formula>IF( Subject = " ", 'Case # ' + CaseNumber, Subject + ' ' + 'Case # ' + CaseNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Macro Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_LoyaltyId__c</fullName>
        <label>New LoyaltyId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberDialed__c</fullName>
        <description>Number Dialed</description>
        <label>NumberDialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Resolve__c</fullName>
        <description>Calculation to define number of days it took to resolve case. Used for CCPA reports.</description>
        <formula>Resolved_Date__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days to Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observation_Form_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Observation Form Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Observation_Form_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates wether an Observation Form has been submitted for the case.</description>
        <label>Observation Form Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Observation_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Observation Form Number</description>
        <label>Observation Form</label>
        <referenceTo>Observation_Form__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Queue_Id__c</fullName>
        <label>Originating Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Queue__c</fullName>
        <label>Originating Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVH_Opportunities__c</fullName>
        <formula>HYPERLINK("https://careers.pvh.com/global/en", "PVH Opportunities")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVH Opportunities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Sub_Type__c</fullName>
        <formula>TEXT(Parent.Sub_Type__c)</formula>
        <label>Parent Case Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <description>Parent ID used in Case List View Filter for Observation Forms To Fill Out</description>
        <formula>ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingPointsAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Points Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Amount__c</fullName>
        <label>Percent Amount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perfect_Match_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a Perfect Match was found for the privacy request</description>
        <label>Perfect Match Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Queue_Id__c</fullName>
        <formula>Owner:User.Personal_Queue_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Queue Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointsAdjustmentTimeStamp__c</fullName>
        <label>Points Adjustment TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PointsGranted__c</fullName>
        <label>Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>